[package]
name = "cix3752ilabelloader"
version = "0.1.4"
description = "面單貼標加載器"
authors = ["RD-CAT"]
edition = "2021"

[lib]
name = "cix3752ilabelloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["fs"] }
